# Lightstage-Acquisition

./: .gitignore  CMakeLists.txt  extract.py  main.cpp
